[package]
name = "luks2-filterstart"
version = "0.1.0"
authors = ["Max"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luks2 = "0.4"
winapi = { version = "0.3", features = ["errhandlingapi", "fileapi", "handleapi", "impl-debug", "impl-default", "ioapiset", "minwindef", "winbase", "winnt"] }
windows-drives = "0.5"
